--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,6 +4,8 @@
     @include media-breakpoint-down(sm) {
         padding-top: 15vh;
         padding-bottom: 15vh;
+        padding-left: 5vw;
+        padding-right: 5vw;
     }
     display: flex;
     flex-direction: column;
@@ -17,6 +19,10 @@
         font-size: 1.2rem;
         &.footer-copyright {
             font-size: 1.4rem;
+            text-align: center;
+            @include media-breakpoint-down(sm) {
+                margin-top: $ui-base * 2;
+            }
         }
     }
 }
