--- a/src/scss/_splash.scss
+++ b/src/scss/_splash.scss
@@ -1,4 +1,5 @@
 .splash {
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -7,6 +8,7 @@
     background-image: url(../img/splash.jpg);
     background-position: center;
     background-size: cover;
+    overflow: hidden;
     @include media-breakpoint-down(sm){
         background-position: right;
     }
@@ -20,6 +22,18 @@
             @include media-breakpoint-down(md){
                 width: 250px;
             }
+        }
+    }
+    .splash-video-background {
+        position: absolute;
+        top: 0;
+        max-width: 100%;
+        min-height: 100%;
+        @include media-breakpoint-down(sm){
+            max-width: initial;
+            height: 100%;
+            left: initial;
+            right: 0;
         }
     }
 }
