--- a/src/scss/_teachers.scss
+++ b/src/scss/_teachers.scss
@@ -19,6 +19,7 @@
             border-radius: 50%;
             @include media-breakpoint-down(md){
                 width: 250px;
+                height: 250px;
                 margin: auto;
             }
         }
